@@ -1626,6 +1626,30 @@
         &user_role_attributes;
         &ext_forceId_attribute;
     </tag>
+    
+    <!-- selectOneLanguage -->
+    <tag>
+        <name>selectOneLanguage</name>
+        <tag-class>org.apache.myfaces.custom.selectOneLanguage.SelectOneLanguageTag</tag-class>
+        <body-content>JSP</body-content>
+        <description>
+            A localized list of languages choose box.
+            The value binds to the language ISO 639-2 code (lowercase).
+			The official codes list is available here :
+			http://www.loc.gov/standards/iso639-2/englangn.html
+        </description>
+        <attribute>
+            <name>maxLength</name>
+            <required>false</required>
+            <rtexprvalue>false</rtexprvalue>
+            <description>
+               Integer equals to the maximum number of characters in the language name.
+            </description>
+        </attribute>
+        &standard_select_one_menu_attributes;
+        &user_role_attributes;
+        &ext_forceId_attribute;
+    </tag>
 
 	<!-- stylesheet -->
 
