@@ -47,6 +47,8 @@
         <h:outputLink value="inputHtml.jsf" ><f:verbatim>Html Editor</f:verbatim></h:outputLink> <br/>
         <h:outputLink value="htmlTag.jsf" ><f:verbatim>Html Tag</f:verbatim></h:outputLink> <br/>
         <h:outputLink value="dataList.jsf" ><f:verbatim>Dynamic Lists</f:verbatim></h:outputLink> <br/>
+        <h:outputLink value="selectOneCountry.jsf" ><f:verbatim>Select one Country</f:verbatim></h:outputLink> <br/>
+        <h:outputLink value="selectOneLanguage.jsf" ><f:verbatim>Select one Language</f:verbatim></h:outputLink> <br/>
         <h:outputLink value="tree.jsf" ><f:verbatim>Tree</f:verbatim></h:outputLink> <br/>
         <h:outputLink value="treeTable.jsf" ><f:verbatim>Tree Table</f:verbatim></h:outputLink> <br/>
         Tree2<br/>
